Fix bugs with triple click implementation. Enable white space to render correctly

--- a/desktop/scss/index.scss
+++ b/desktop/scss/index.scss
@@ -20,3 +20,7 @@ $speed-setting-color: lightblue;
 .action-menu-component {
     @extend .row
 }
+
+.text-display-component {
+    white-space: pre;
+}
